--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/cheese_spaghetti.html">Cheese Spaghetti</a></li>
+        <li><a href="recipes/chicken_fettuccine.html">Chicken Fettuccine</a></li>
+    </ul>
 
 </body>
 </html>
