--- a/recipes/cheese_spaghetti.html
+++ b/recipes/cheese_spaghetti.html
@@ -8,7 +8,7 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Cheese Spaghetti</h1>
-    <img src="../recipe_images/cheese_spaghetti.jpg" height="150" width="150">
+    <img src="../recipe_images/cheese_spaghetti.png" height="150" width="150">
 
     <h2>Description</h2>
     <p>Spaghetti, but with cheese</p>
