--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,5 +9,29 @@
     <a href="../index.html">Home</a>
 
     <h1>Lasagna</h1>
+    <img src="../recipe_images/lasagna.png" height="150" width="150">
+
+    <h2>Description</h2>
+    <p>It's lasagna...</p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Lasagna noodles</li>
+        <li>Tomato sauce</li>
+        <li>Ground beef</li>
+        <li>Ground pork</li>
+        <li>Mozarella</li>
+        <li>Ricotta</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Preheat oven to 375</li>
+        <li>Lay lasagna noodles in bottom of pan</li>
+        <li>Add tomato sauce, then ground meats and cheese</li>
+        <li>Repeat steps 2 and 3 to create desired number of layers</li>
+        <li>Bake for 35-45 minutes</li>
+        <li>Let cool for 10 minutes before serving</li>
+    </ol>
 </body>
 </html>
